Bug 91767 - Formula Editor: "fullscreen" dialog not shown after following step.
Summary: Formula Editor: "fullscreen" dialog not shown after following step.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0 target:5.3.0.1
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-31 05:35 UTC by sawakaze
Modified: 2017-01-13 13:02 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sawakaze 2015-05-31 05:35:21 UTC
Hi

1. Ceate new Formula 
2. Add formula and file save..
3. Select View > Zoom > Zoom & View Layout
4. Set Optimal and press OK
5. View > Fullscreen 
6. Press Fullscreen  
   --> Release Fullscreen.

7. Retry to View > Fullscreen

--> fullscreen dialog not shown.
Therefore, after retry fullscreen, user is unable to release fullscreen by button .

env...

Version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: ja-JP (ja_JP.UTF-8)
Comment 1 Shinji Enoki 2015-05-31 06:10:40 UTC
I reproduce in the following environments.
Debian wheezy 32bit
Libo 5.0.0.0.beta1(Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3)
Comment 2 QA Administrators 2016-09-20 09:46:14 UTC Comment hidden (obsolete)
Comment 3 Commit Notification 2016-12-14 08:08:33 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=77eac365c179e1a1cad3e0d8ebe3fe5bafa65720

tdf#91767 Read SfxItemSet before disposing its AbstractSvxZoomDialog

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-12-14 12:17:43 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b4e1d0240ed55f05d435bb848d8f256cc81e3ba3&h=libreoffice-5-3

tdf#91767 Read SfxItemSet before disposing its AbstractSvxZoomDialog

It will be available in 5.3.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2017-01-13 12:25:14 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?