tdf#91767 Read SfxItemSet before disposing its AbstractSvxZoomDialog

Change-Id: I5dc6a1b1fa42a4fd76af398c2fb56461574900ee
Reviewed-on: https://gerrit.libreoffice.org/31980
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Takeshi Abe <tabe@fixedpoint.jp>
(cherry picked from commit 77eac365c179e1a1cad3e0d8ebe3fe5bafa65720)